# myapp-template

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/defaults/: app-profile.json  config.json  license.example.json
dev/mock-cdn/products/myapp-template/development/linux/x64/: MyAppTemplate-0.1.1.AppImage  MyAppTemplate-0.1.2.AppImage  MyAppTemplate-0.1.3.AppImage  MyAppTemplate-0.1.4.AppImage  MyAppTemplate-0.1.5.AppImage  MyAppTemplate-0.1.6.AppImage  manifest.json
dev/mock-cdn/products/myapp-template/development/linux/x64/release-notes/: 0.1.1.json  0.1.2.json  0.1.3.json  0.1.4.json  0.1.5.json  0.1.6.json
dev/mock-license-server/: README.md
dev/mock-license-server/api/v1/: license-status.json
docs/: API_CONTRACT.md  ARCHITECTURE.md  CDN.md  CONFIGURATION.md  DEVELOPMENT.md  DIAGNOSTICS.md  LICENSE_SERVER.md  QUICKSTART.md  ROADMAP.md  SECURITY_AND_PRIVACY.md  SETTINGS.md  TERMINOLOGY.md  TESTING.md  TROUBLESHOOTING.md  UPDATES.md
profiles/: development.json  production.json  staging.json
resources/: myapp_template.qrc
scripts/: build.sh  run-dev-services.sh  test.sh
src/app/: main.cpp
src/core/: AppLogger.cpp  AppLogger.h  ConfigManager.cpp  ConfigManager.h  DiagnosticsManager.cpp  DiagnosticsManager.h  ThemeManager.cpp  ThemeManager.h
src/licensing/: LicenseManager.cpp  LicenseManager.h
src/settings/: SettingsDialog.cpp  SettingsDialog.h
src/ui/: MainWindow.cpp  MainWindow.h
src/updates/: UpdateManager.cpp  UpdateManager.h
src/workspace/: TemplateDashboard.cpp  TemplateDashboard.h
tests/: MANUAL_TEST_CHECKLIST.md  TEST_CASES.md
tests/fixtures/licenses/: active-license.json  expired-license.json  malformed-license.json  wrong-product-license.json
tests/fixtures/manifests/: malformed-manifest.json  no-update.json  update-available.json  wrong-product-manifest.json
tests/unit/: ConfigManagerTest.cpp  LicenseManagerTest.cpp  LoggingDiagnosticsTest.cpp  SettingsDialogTest.cpp  UpdateManagerTest.cpp
